--- a/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
@@ -7,8 +7,8 @@
     <!-- TMPL_IF NAME="loginprompt" -->Log in to Koha<!-- /TMPL_IF -->
 </title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<div id="login">
-<h1><a href="" title=""><span class="hide">Log in to Koha</span></a></h1>
+<div id="main">
+<h1>Log in to Koha</h1>
 <!-- TMPL_IF NAME="nopermission" -->
 <!-- This is what is displayed if user doesn"t have permission --><h3>Login Error</h3>
 <p>Sorry, Koha doesn"t think you have permission for this page.</p>
