--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/detail.tmpl
@@ -40,7 +40,7 @@
         <!-- /TMPL_IF -->
         <!-- TMPL_IF name="publishercode" -->
             <p><label><b>Published by :</b></label>
-                <a href="/cgi-bin/koha/catalogue/search.pl?q=pb:<!-- TMPL_VAR NAME="publishercode"">
+                <a href="/cgi-bin/koha/catalogue/search.pl?q=pb:<!-- TMPL_VAR NAME="publishercode" -->">
                     <!-- TMPL_VAR NAME="publishercode" -->
                 </a>&nbsp;
             </p>
