--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/results.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/results.tmpl
@@ -99,35 +99,15 @@
             </table>
             </form>
         <!-- TMPL_ELSE -->
-            <div class="searchresults">
-              <form action="/cgi-bin/koha/catalogue/search.pl" method="get" name="myform" id="mainform">
-                <!-- TMPL_IF NAME="searchdesc" -->
-                    <input type="hidden" name="q" value="<!-- TMPL_VAR NAME="searchdesc" escape="html" -->" />
-                <!-- /TMPL_IF -->
-                    <!-- RE-SORT START -->
-                    <!-- TMPL_IF NAME="sort_by_loop" -->
-                    <p>
-                    Re-sort results
-                    <select id="sort_by" name="sort_by" onChange="document.myform.submit();">
-                        <option value="">Field-weighted, Relevance Ranked</option>
-                        <!-- TMPL_LOOP NAME="sort_by_loop" -->
-                            <option value="<!-- TMPL_VAR NAME="value" -->" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->><!-- TMPL_VAR NAME="label" --></option>
-                        <!-- /TMPL_LOOP -->
-                    </select>
-                    </p>
-                    <!-- /TMPL_IF -->
-                    <!-- RESORT END -->
-              </form>
-                    
-                    <!-- ######### -->
-                    
-                    <dl>
-                    <!-- FACETS START -->
-                    <!-- TMPL_IF NAME="opacfacets" -->
-                    <dt id="facets">
+            <!-- ######### -->
+            <div id="facets">
+                <dl>
+                <!-- FACETS START -->
+                <!-- TMPL_IF NAME="opacfacets" -->
+                    <dt id="facets1" onclick="var Elt=document.getElementById('facets_list');if (Elt.style.display!='block'){Elt.style.display='block';} else {Elt.style.display='none';}">
                     Refine Your Search
                     </dt>
-                    <dd>
+                    <dd id="facets_list" style="display:none;">
                     <ul>
                     <!-- TMPL_LOOP NAME="facets_loop" -->
                     <li id="<!-- TMPL_VAR NAME="type_id" -->"><!-- TMPL_VAR NAME="type_label" -->
@@ -151,47 +131,64 @@
                     <!-- /TMPL_LOOP -->
                     </ul>
                     </dd>
-                    <!-- /TMPL_IF -->
-                    <!-- FACETS END -->
-                    
-                    <!-- BULKEDIT START -->
-                    <!--TMPL_IF Name="bulkedit"--> 
+                <!-- /TMPL_IF -->
+                <!-- FACETS END -->
+                <!-- BULKEDIT START -->
+                <!--TMPL_IF Name="bulkedit"--> 
                     <dt id="hbulkedit" onclick="var Elt=document.getElementById('parambulkedit');if (Elt.style.display!='block'){Elt.style.display='block';} else {Elt.style.display='none';}">
                     Bulk edit
                     </dt>
                     <dd id="parambulkedit" style="display:none;">
-                      <form name="bulkedit" action="search.pl">
-                          <input type="hidden" name="q" value="<!-- TMPL_VAR NAME="searchdesc" -->" />
-                          <input type="hidden" name="operation" value="bulkedit" />
-                          Search for Value :<input type="text" name="inputvalue" value=""/><br/>
-                          Subfield       <select name="tagsubfield">
-                          <!--TMPL_LOOP Name="tagsubfields"-->
+                    <form name="bulkedit" action="search.pl">
+                        <input type="hidden" name="q" value="<!-- TMPL_VAR NAME="searchdesc" -->" />
+                        <input type="hidden" name="operation" value="bulkedit" />
+                        Search for Value :<input type="text" name="inputvalue" value=""/><br/>
+                        Subfield       <select name="tagsubfield">
+                        <!--TMPL_LOOP Name="tagsubfields"-->
                             <option value="<!--TMPL_VAR Name="tagsubfield"-->"> <!--TMPL_VAR Name="tagsubfield"-->
                             <!-- --<TMPL_VAR Name="tagdesc">--<TMPL_VAR Name="subfielddesc">-->
                             </option>
-                          <!--/TMPL_LOOP -->
-                          </select><br/>
-                          Change to : <input type="text" name="targetvalue" value=""/><br/>
-                          Test only : <input type="checkbox" name="test" value="1"/><br/>
-                          <input type="Submit" name="Edit" value="Edit"/>
-                      </form>
+                        <!--/TMPL_LOOP -->
+                        </select><br/>
+                        Change to : <input type="text" name="targetvalue" value=""/><br/>
+                        Test only : <input type="checkbox" name="test" value="1"/><br/>
+                        <input type="Submit" name="Edit" value="Edit"/>
+                    </form>
                     </dd>
-    <!-- TMPL_IF NAME="bulkeditresults" -->
-    <dd><em>
-        tagsubfield : <!-- TMPL_VAR NAME="countchanged" --> Change <!-- TMPL_VAR NAME="countchanged" --> To <!-- TMPL_VAR NAME="countchanged" --><br />
-        <!-- TMPL_VAR NAME="countchanged" --> biblios changed <br />
-        <!--TMPL_VAR Name="countunchanged"--> biblios unchanged<br />
-        <em>
-    </dd>
-    <!-- /TMPL_IF -->
-                    <!--/TMPL_IF--> 
-                    <!-- BULKEDIT END -->
-                    </dl>
-                    
-                    <!-- ######### -->
+                    <!-- TMPL_IF NAME="bulkeditresults" -->
+                    <dd><em>
+                        tagsubfield : <!-- TMPL_VAR NAME="countchanged" --> Change <!-- TMPL_VAR NAME="countchanged" --> To <!-- TMPL_VAR NAME="countchanged" --><br />
+                        <!-- TMPL_VAR NAME="countchanged" --> biblios changed <br />
+                        <!--TMPL_VAR Name="countunchanged"--> biblios unchanged<br />
+                        <em>
+                    </dd>
+                    <!-- /TMPL_IF -->
+                <!--/TMPL_IF--> 
+                <!-- BULKEDIT END -->
+                </dl>
+            </div>
+            <!-- ######### -->
 
+            <div id="searchresults">
+              <form action="/cgi-bin/koha/catalogue/search.pl" method="get" name="myform" id="mainform">
+                <!-- TMPL_IF NAME="searchdesc" -->
+                    <input type="hidden" name="q" value="<!-- TMPL_VAR NAME="searchdesc" escape="html" -->" />
+                <!-- /TMPL_IF -->
+                    <!-- RE-SORT START -->
+                    <!-- TMPL_IF NAME="sort_by_loop" -->
+                    <p>
+                    Re-sort results
+                    <select id="sort_by" name="sort_by" onChange="document.myform.submit();">
+                        <option value="">Field-weighted, Relevance Ranked</option>
+                        <!-- TMPL_LOOP NAME="sort_by_loop" -->
+                            <option value="<!-- TMPL_VAR NAME="value" -->" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->><!-- TMPL_VAR NAME="label" --></option>
+                        <!-- /TMPL_LOOP -->
+                    </select>
+                    </p>
+                    <!-- /TMPL_IF -->
+                    <!-- RESORT END -->
+              </form>
                     <!-- TABLE RESULTS START -->
-                    
                 <table>
                     <tr>
                         <th>&nbsp;</th>
