--- a/koha-tmpl/intranet-tmpl/prog/en/circ/branchtransfers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/branchtransfers.tmpl
@@ -152,7 +152,7 @@
             <!-- TMPL_LOOP Name="trsfitemloop" -->
                 <tr>
                     <td>
-                        <a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR Name="biblionumber" -->><!-- TMPL_VAR Name="barcode" --></a>
+                        <a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR Name="biblionumber" -->"><!-- TMPL_VAR Name="barcode" --></a>
                     </td>
                     <td>
                         <p><!-- TMPL_VAR Name="title" --> (<!-- TMPL_VAR Name="author" -->)</p>
