--- a/koha-tmpl/intranet-tmpl/prog/en/installer/step1.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/installer/step1.tmpl
@@ -12,7 +12,7 @@ listed, please inform your systems administrator.</p>
 <form name="language" method="post">
 <select name="language">
   <!--TMPL_LOOP Name="languages"-->
-  <option value="<!--TMPL_VAR Name="value" -->""><!--TMPL_VAR Name="description"-->
+  <option value="<!--TMPL_VAR Name="value" -->"><!--TMPL_VAR Name="description"-->
 <!--   </option> -->
   <!--/TMPL_LOOP -->
 </select>
