--- a/koha-tmpl/intranet-tmpl/prog/en/serials/claims.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/claims.tmpl
@@ -134,7 +134,7 @@ name="supplierid" -->,''); return false" class="button">Supplier Group Claim Let
 		Email: <!-- TMPL_VAR NAME="contemail" --><br />
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME="accountnumber" -->
-		A/C: <!-- TMPL_VAR NAME="accountnumber"></p>
+		A/C: <!-- TMPL_VAR NAME="accountnumber" --></p>
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME="contact" -->
 		<p>Dear <!-- TMPL_VAR NAME="contact" --></p>
