--- a/koha-tmpl/opac-tmpl/prog/en/includes/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/includes/opac.css
@@ -261,18 +261,31 @@ background-color:red;
 
 /* facets bloc */
 #facets {
-    float:right;
-    border: 1px solid #CCCCCC;
-    margin-top: 5px;
-    margin-left: 15px;
+    position:absolute;
+    right:1em;
     font-size:0.8em;
-}
-#facets h2 {
-    background-color:#EFF1DC;
-    border-bottom: 1px solid #CCCCCC;
     margin:0px;
-    font-size:1em;
+    background-color:#eeeeee;
+    border:1px solid #CCCCCC;
 }
+
+#facets dl {
+    margin:0px;
+}
+#facets dd {
+    margin:0px;
+}
+#facets dt {
+    font-weight:bold;
+    background-color:#EEC95A;
+    border:0px;
+}
+
+#facets li {
+    list-style-type: none;
+    margin-left:0px;
+}
+
 #facets ul {
     list-style-type: none;
     padding-left:10px;
