--- a/koha-tmpl/opac-tmpl/prog/en/opac-main.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-main.tmpl
@@ -47,6 +47,7 @@
                 <input id="recentacqui" type="text" name="recentacqui" value="30" size="3"/>
                 acquisitions
                 <input type="submit" value=" OK " />
+            </form>
         </li>
     </ul>
 </div>
@@ -64,6 +65,7 @@
                 </option>
             <!-- /TMPL_LOOP -->
         </select>
+        <input type="submit" value="Change" />
     </form>
     </ul>
 </div>
