--- a/koha-tmpl/intranet-tmpl/prog/en/barcodes/label-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/barcodes/label-home.tmpl
@@ -12,51 +12,57 @@
 <table summary="fields to print">
 <tr>
         <td>
-                <input type="checkbox" name="itemtype" value=1 
                 <!-- TMPL_IF NAME="itemtype"-->
-                     checked
-                <!-- /TMPL_IF --> >
+                    <input type="checkbox" name="itemtype" value=1 checked>
+                <!-- TMPL_ELSE -->
+                    <input type="checkbox" name="itemtype" value=1>
+                <!-- /TMPL_IF -->
                 <label for="itemtype">Item Type</label>
         </td>
 
         <td>
-                <input type="checkbox" name="isbn" value=1 
-                <!-- TMPL_IF NAME="isbn" -->
-                     checked
-                <!-- /TMPL_IF -->>
+                <!-- TMPL_IF NAME="isbn"-->
+                    <input type="checkbox" name="isbn" value=1 checked>
+                <!-- TMPL_ELSE -->
+                    <input type="checkbox" name="isbn" value=1>
+                <!-- /TMPL_IF -->
                 <label for="isbn">ISBN</label>
         </td>
 
 </tr>
 <tr>
         <td>
-                <input type="checkbox" name="dcn" value=1 
-                <!-- TMPL_IF NAME="dewey" -->
-                     checked
-                <!-- /TMPL_IF -->>
+                <!-- TMPL_IF NAME="dcn"-->
+                    <input type="checkbox" name="dcn" value=1 checked>
+                <!-- TMPL_ELSE -->
+                    <input type="checkbox" name="dcn" value=1>
+                <!-- /TMPL_IF -->
                 <label for="dcn">Dewey / Call Number</label>
         </td>
         <td>
-                <input type="checkbox" name="classif" value=1  
-                <!-- TMPL_IF NAME="class" -->
-                     checked
-                <!-- /TMPL_IF -->>
+                <!-- TMPL_IF NAME="classif"-->
+                    <input type="checkbox" name="classif" value=1 checked>
+                <!-- TMPL_ELSE -->
+                    <input type="checkbox" name="classif" value=1>
+                <!-- /TMPL_IF -->
                 <label for="classif">Classification</label>
         </td>
 </tr>
 <tr>
         <td>
-                <input type="checkbox" name="itemcallnumber" value=1 
-                <!-- TMPL_IF NAME="itemcallnumber" -->
-                     checked
-                <!-- /TMPL_IF -->>
+                <!-- TMPL_IF NAME="itemcallnumber"-->
+                    <input type="checkbox" name="itemcallnumber" value=1 checked>
+                <!-- TMPL_ELSE -->
+                    <input type="checkbox" name="itemcallnumber" value=1>
+                <!-- /TMPL_IF -->
                 <label for="itemcallnumber">Item Call Number</label>
         </td>
         <td>
-                <input type="checkbox" name="subclass" value=1  
-                <!-- TMPL_IF NAME="subclass" -->
-                     checked
-                <!-- /TMPL_IF -->>
+                <!-- TMPL_IF NAME="subclass"-->
+                    <input type="checkbox" name="subclass" value=1 checked>
+                <!-- TMPL_ELSE -->
+                    <input type="checkbox" name="subclass" value=1>
+                <!-- /TMPL_IF -->
                 <label for="subclass">Sub-Class</label>
         </td>
 </tr>
@@ -65,91 +71,99 @@
 
 <h3>Confirm Label Template</h3>
 <select name="tmpl_id">
-	<!-- TMPL_LOOP NAME="label_templates" -->
-	   	<option value="<!-- TMPL_VAR NAME="tmpl_id" -->"
-			<!-- TMPL_IF NAME="active" --> selected  <!-- /TMPL_IF -->
-		><!-- TMPL_VAR NAME="tmpl_code" --></option>
-	<!-- /TMPL_LOOP -->
+    <!-- TMPL_LOOP NAME="label_templates" -->
+        <!-- TMPL_IF NAME="active" -->
+            <option value="<!-- TMPL_VAR NAME="tmpl_id" -->" selected>
+        <!-- TMPL_ELSE -->
+            <option value="<!-- TMPL_VAR NAME="tmpl_id" -->">
+        <!-- /TMPL_IF -->
+        <!-- TMPL_VAR NAME="tmpl_code" --></option>
+    <!-- /TMPL_LOOP -->
 </select>
 
 
 <h3>Confirm Barcode Type</h3>
  <select name="barcodetype">
-                <option value="COOP2of5"
-                        <!-- TMPL_IF NAME="COOP2of5_checked" -->
-                             selected
-                        <!--/TMPL_IF -->
-                        >COOP2of5</option>
-                <option value="Code39"
-                        <!-- TMPL_IF NAME="Code39_checked" -->
-                             selected
-                        <!-- /TMPL_IF -->
-                        >Code39</option>
-                <option value="EAN13"
-                        <!-- TMPL_IF NAME="EAN13_checked" -->
-                             selected
-                        <!-- /TMPL_IF -->
-                        >EAN13(JAN13)</option>
-                <option value="EAN8"
-                        <!-- TMPL_IF NAME="EAN8_checked" -->
-                             selected<!-- /TMPL_IF -->
-                        >EAN8(JAN8)</option>
-                <option value="ITF"
-                        <!-- TMPL_IF NAME="ITF_checked" -->
-                             selected
-                        <!-- /TMPL_IF -->
-                        >ITF(Interleaved2of5)</option>
-                <option value="Industrial2of5"
-                        <!-- TMPL_IF NAME="Industrial2of5_checked" -->
-                             selected
-                        <!-- /TMPL_IF -->
-                        >Industrial2of5</option>
-                <option value="Matrix2of5"
-                        <!-- TMPL_IF NAME="Matrix2of5_checked" -->
-                             selected
-                        <!-- /TMPL_IF -->
-                        >Matrix2of5</option>
-                <option value="NW7"
-                        <!-- TMPL_IF NAME="NW7_checked" -->
-                             selected
-                        <!-- /TMPL_IF -->
-                        >NW7</option>
-                <option value="QRcode"
-                        <!-- TMPL_IF NAME="QRcode_checked" -->
-                             selected
-                        <!-- /TMPL_IF -->
-                        >QRcode</option>
-                <option value="UPC-A"
-                        <!-- TMPL_IF NAME="UPC-A_checked" -->
-                             selected
-                        <!-- /TMPL_IF -->
-                        >UPC-A</option>
-                <option value="UPC-E"
-                        <!-- TMPL_IF NAME="UPC-E_checked" -->
-                             selected
-                        <!-- /TMPL_IF -->
-                        >UPC-E</option>
+                <!-- TMPL_IF NAME="COOP2of5_checked" -->
+                    <option value="COOP2of5" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="COOP2of5" selected>
+                <!-- /TMPL_IF -->COOP2of5</option>
+                <!-- TMPL_IF NAME="Code39_checked" -->
+                    <option value="Code39" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="Code39" selected>
+                <!-- /TMPL_IF -->Code39</option>
+                <!-- TMPL_IF NAME="EAN13_checked" -->
+                    <option value="EAN13" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="EAN13" selected>
+                <!-- /TMPL_IF -->EAN 13</option>
+                <!-- TMPL_IF NAME="EAN8_checked" -->
+                    <option value="EAN8" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="EAN8" selected>
+                <!-- /TMPL_IF -->EAN8</option>
+                <!-- TMPL_IF NAME="ITF_checked" -->
+                    <option value="ITF" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="ITF" selected>
+                <!-- /TMPL_IF -->ITF (Interleaved2of5)</option>
+                <!-- TMPL_IF NAME="Industrial2of5_checked" -->
+                    <option value="Industrial2of5" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="Industrial2of5" selected>
+                <!-- /TMPL_IF -->Industrial2of5</option>
+                <!-- TMPL_IF NAME="Matrix2of5_checked" -->
+                    <option value="Matrix2of5" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="Matrix2of5" selected>
+                <!-- /TMPL_IF -->Matrix2of5</option>
+                <!-- TMPL_IF NAME="NW7_checked" -->
+                    <option value="NW7" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="NW7" selected>
+                <!-- /TMPL_IF -->NW7</option>
+                <!-- TMPL_IF NAME="QRcode_checked" -->
+                    <option value="QRcode" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="QRcode" selected>
+                <!-- /TMPL_IF -->QRcode</option>
+                <!-- TMPL_IF NAME="UPC-A_checked" -->
+                    <option value="UPC-A" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="UPC-A" selected>
+                <!-- /TMPL_IF -->UPC-A</option>
+                <!-- TMPL_IF NAME="UPC-E_checked" -->
+                    <option value="UPC-E" selected>
+                <!-- TMPL_ELSE -->
+                    <option value="UPC-E" selected>
+                <!-- /TMPL_IF -->UPC-E</option>
         </select>
 </h3>
 
 
 <h3>Confirm Printing Type</h3>
 
-<input type="radio" name="printingtype" value="spine"
-        <!-- TMPL_IF NAME="printingtype_spine" -->
-                checked
-        <!--/TMPL_IF -->
-	>Spine Labels
-<input type="radio" name="printingtype" value="barcode"
-        <!-- TMPL_IF NAME="printingtype_barcode" -->
-                checked
-        <!--/TMPL_IF -->
-	>Barcode Labels
-<input type="radio" name="printingtype" value="both"  
-	<!-- TMPL_IF NAME="printingtype_both" -->
-		checked       
-	<!--/TMPL_IF -->
-	>Both Labels
+<!-- TMPL_IF NAME="printingtype_spine" -->
+    <input type="radio" name="printingtype" value="spine" checked/>
+<!-- TMPL_ELSE -->
+    <input type="radio" name="printingtype" value="spine" />
+<!--/TMPL_IF -->
+    Spine Labels
+<!-- TMPL_IF NAME="printingtype_barcode" -->
+    <input type="radio" name="printingtype" value="barcode" checked />
+<!-- TMPL_ELSE -->
+    <input type="radio" name="printingtype" value="barcode" />
+<!--/TMPL_IF -->
+Barcode Labels
+
+<!-- TMPL_IF NAME="printingtype_both" -->
+    <input type="radio" name="printingtype" value="both" checked />
+<!-- TMPL_ELSE -->
+    <input type="radio" name="printingtype" value="both" />
+<!--/TMPL_IF -->
+Both Labels
 
 <h3>
         Start printing from Label number:<input type="textbox" name="startlabel"  SIZE="1"
@@ -159,13 +173,12 @@
 
 <p>
 <p>
- <input type="checkbox" name="guidebox" value=1
-                <!-- TMPL_IF NAME="guidebox"-->
-                     checked
-                <!-- /TMPL_IF -->>
-                <label for="guidebox">Draw Guide Boxes</label>
-<p>
-<p>
+<!-- TMPL_IF NAME="guidebox"-->
+    <input type="checkbox" name="guidebox" value=1 checked />
+<!-- TMPL_ELSE -->
+    <input type="checkbox" name="guidebox" value=1 />
+<!-- /TMPL_IF -->
+<label for="guidebox">Draw Guide Boxes</label>
 <p>
         <input type="submit" value="Submit">
         <input type="hidden" name=op value="save_conf">
